fix expand and collapse all buttons to resemble delta site

--- a/us/en/skymiles/blocks/accordion/accordion.css
+++ b/us/en/skymiles/blocks/accordion/accordion.css
@@ -159,14 +159,11 @@
 .accordion-wrapper [role="group"] button:disabled {
     font-family: var(--heading-font-family);
     text-decoration: none;
+    display: none;
 }
 
 .accordion-wrapper [role="group"] button:disabled:hover {
     background: none;
-}
-
-.accordion-wrapper [role="group"] button:disabled {
-    display: none;
 }
 
 .accordion .tertiary.highlight {
